# lc0crawl

./: .isort.cfg  README.md  pyproject.toml  setup.cfg
lc0crawl/: Jobs_and_Plots.ipynb  __init__.py  main.py
