[tool.poetry]
name = "lc0crawl"
version = "0.1.0"
description = "A simple crawler to extract LCZero opening preferences"
authors = ["Karlson Pfannschmidt <kiudee@mail.upb.de>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.1"
SQLAlchemy = "^1.4.3"
beautifulsoup4 = "^4.9.3"
chess = "^1.4.0"
pandas = "^1.2.3"
requests = "^2.25.1"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
SciencePlots = "^1.0.7"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
